syntax = "proto3";

option java_multiple_files = true;
option java_package = "net.devh.boot.grpc.examples.lib";
option java_outer_classname = "HelloWorldProto";

package servicefilter.helloworld.mock;

// The greeting service definition.
service Simple {
    // Sends a greeting
    rpc SayHello (HelloRequest) returns (HelloReply) {
    }

    rpc RedisGet (RedisGetRequest) returns (RedisGetReply) {}
}

// The request message containing the user's name.
message HelloRequest {
    string name = 1;
}

// The response message containing the greetings
message HelloReply {
    string message = 1;
}

message RedisGetRequest {
    string key = 1;
}

message RedisGetReply {
    string value = 1;
}